www/views/Extjs3/themes/Group-Office/xtheme-groupoffice.css
/* General styling */
html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,p,blockquote,th,td,span{
	font: 13px Helvetica, Arial, sans-serif;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 13px;
	font-style: normal;
	font-weight: 200;
	line-height: 1.3em;
	margin: 0;
	padding: 0;
}

/* Main navigation */
.go-moduletabs-header ul.x-tab-strip-top{
	background: none #000;
}

.go-moduletabs-header .x-tab-strip-top .x-tab-right{
	background: none;
}

.go-moduletabs-header span{
	line-height: 20px;
}

.x-tab-strip-top .x-tab-right, .x-tab-strip-top .x-tab-left, .x-tab-strip-top .x-tab-strip-inner{
	background: none;
}

.x-tab-strip-top .x-tab-right {
	padding: 0 5px;
}

.x-tab-strip .x-tab-strip-active span.x-tab-strip-text {
	color: #fff;
	font-weight: normal;
}

.x-tab-strip span.x-tab-strip-text{
	color: #d1d1d1;
	font: inherit;
}

.x-toolbar, .x-border-layout-ct {
	background: none;
	border: none;
}

.x-panel-noborder .x-panel-tbar-noborder .x-toolbar, .x-tab-strip-top{
	border: none !important;
}

.x-btn button{
	color: #fff;
	font: inherit;
	font-size: 12.5px;
}

.x-tab-strip .x-tab-with-icon span.x-tab-strip-text{
	padding-left: 5px;
}

.go-moduletabs-header ul.x-tab-strip-top {
	padding-left: 10px;
}

.x-tab-panel-body-top{
	padding: 20px;
}

.x-window .x-tab-panel{
	/*padding-top:10px;*/
}

.x-btn-tl, .x-btn-tr, .x-btn-tc, .x-btn-ml, .x-btn-mr, .x-btn-mc, .x-btn-bl, .x-btn-br, .x-btn-bc {
	background: none;
}

/*.x-panel-body .x-border-panel .x-btn {
	border: 1px solid #fff;
}*/

.x-btn-noicon .x-btn-small .x-btn-text {
	height: auto;
	text-transform: uppercase;
	font-weight: bold;
}

.x-btn button {
	font: 10px Helvetica, Arial, sans-serif;
	}

.x-window .x-form-text, .x-window textarea.x-form-field, .go-border-center .x-form-text, .go-border-center textarea.x-form-field{
	background-color: #e5f5f9;
	border: 1px solid #11a2cd;
	color: #000;
	margin: 0; 
}

.x-form-empty-field {
	color: gray !important;
}

.ab-search-form-panel{
	padding: 0;
}

.ext-strict .x-form-text {
	height: 16px;
}

.x-btn-noicon .x-btn-small .x-btn-text{
/*	height: 12px;*/
	padding: 0 6px;
}

.x-btn-text-icon .x-btn-icon-small-left .x-btn-text{
	font-size: 12px;
}

.x-panel-header {
	background: #fff none;
	border: none;
	color: #000;
	font-weight: 400;
	font-size: 11px;
	font-family: inherit;
	padding: 10px 10px 0 10px;
}

.x-panel-header-text {
	white-space: nowrap;
	font-weight: bold;
	font-size: 12px;
}

.x-panel-body .x-toolbar{
	background: #fff none;
	border: none;
/*	padding: 10px !important;*/
}

.x-toolbar-ct {
	width: auto;
}

.x-grid3-check-col {
	background-image: url(/images/extjs/menu/unchecked.gif);
}

.x-grid3-check-col-on {
	background-image: url(/images/extjs/menu/checked.gif);
}

/*.x-grid3-row {
	border: none;
}*/

.x-grid3-row-over {
	background: #eee none !important;
}

.x-tool {
	background-image: url(/images/extjs/panel/tool-sprites.gif);
}

ul.x-tab-strip-top {
	background: #fff none;
	border: none;
}

.x-panel-body .x-tab-strip span.x-tab-strip-text, .x-panel-body .x-tab-strip .x-tab-strip-active span.x-tab-strip-text,.x-window .x-tab-strip span.x-tab-strip-text, .x-window .x-tab-strip .x-tab-strip-active span.x-tab-strip-text {
	color: #000;
	font-weight: normal;
	padding: 2px 5px 1px;
}

.x-panel-body .x-tab-strip .x-tab-strip-active span.x-tab-strip-text, .x-window .x-tab-strip .x-tab-strip-active span.x-tab-strip-text {
        font-weight: bold;
}

.x-tab-panel-header, .x-tab-panel-footer {
	background-color: #fff;
	border: none;
}

ul.x-tab-strip li {
	border-top: 1px solid #009bcb;
	border-left: 1px solid #009bcb;
	border-right: 1px solid #009bcb;
	margin: 0 3px 0 0;
}

ul.x-tab-strip .x-tab-strip-active {
	border-bottom: 1px solid #fff;
	margin: 0 3px -1px 0;
}

.x-tab-panel-body-top {
	border: none;
}

.x-panel-body ul.x-tab-strip-top, .x-window ul.x-tab-strip-top  {
	border-bottom: 1px solid #009bcb !important;
	margin: 10px 10px 0 10px;
}

.x-grid3-cell-inner {
	padding: 2px;
}

.x-grid3-hd-inner {
	padding: 2px;
}

.x-grid3-check-col, .x-grid3-check-col-on{
	width: 16px;
}

.x-tab-strip-top .x-tab-strip-active .x-tab-right{
	margin-bottom: 0;
}

.x-grid3-header {
	background: #fff none !important;
	border-bottom: 2px solid #000;
	/*border-top: 1px solid #ddd;*/
}

/*.x-grid3-hd-over{
	background: #fff none !important;
}*/

.x-grid3-hd-btn {
	background-image: url(/images/extjs/grid/grid3-hd-btn.gif);
	/*background-color:#f1f1f1 !important;*/
	
}

td.x-grid3-hd-over .x-grid3-hd-inner, td.x-grid3-hd-menu-open .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-asc .x-grid3-hd-inner{
	background:none !important;
}

/*td.x-grid3-hd-over, td.sort-desc, td.sort-asc, td.x-grid3-hd-menu-open {
	
border-left: 1px solid #ddd;
}*/
	

td.x-grid3-hd-over, .x-grid3-hd-row td {
	border-color:white;
	/*background-color:#f1f1f1;*/
	/*padding-right: 5px;*/
	/*border-right:1px solid white;*/
}

/*td.x-grid3-hd-over{
	
	background: #f1f1f1 none !important;
}*/

.x-tab-panel .x-tab-panel-body-top {
	padding: 0;
}

.x-tab-panel .x-grid3-scroller{
	padding: 0;
}

.x-grid3-row, .x-grid3-summary-row {
	border:none;
	border-bottom: 1px solid #666;	
}
.go-border-west .x-grid3-row, .go-border-west .x-grid3-summary-row,.go-border-east .x-grid3-row, .go-border-east .x-grid3-summary-row {
	border-bottom: 1px solid white;	
}

.x-portlet .x-grid3-row{
	border-bottom: 1px solid white;	
}

.ab-search-form-panel .x-form-text, .ab-search-form-panel textarea.x-form-field {
	background: #33afd4 none;
	border: 1px solid #fff;
	color: #ceeef2;
	margin: 0; 
}

.x-item-disabled .x-tbar-page-next {
	background-image: url(/images/extjs/grid/page-next-disabled.gif) !important;
}

.x-item-disabled .x-tbar-page-prev {
	background-image: url(/images/extjs/grid/page-prev-disabled.gif) !important;
}

.x-tbar-page-next {
	background-image: url(/images/extjs/grid/page-next.gif) !important;
}

.x-tbar-page-prev {
	background-image: url(/images/extjs/grid/page-prev.gif) !important;
}
/* ... */

